--- a/Android/RSCAndroid/app/src/main/res/values/strings.xml
+++ b/Android/RSCAndroid/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="loading">Loading…</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
+    <string name="facebook_app_id">1829184290631001</string>
 </resources>
