Implement facebook login and FCM with Normal login

--- a/Android/RSCAndroid/app/src/main/res/values/strings.xml
+++ b/Android/RSCAndroid/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="facebook_app_id">1829184290631001</string>
+    <string name="fb_login_protocol_scheme">fb1829184290631001</string>
 </resources>
