--- a/Android/RSCAndroid/app/src/main/res/values/strings.xml
+++ b/Android/RSCAndroid/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RSCAndroid</string>
+    <string name="app_name">GetQuizzd</string>
     <string name="loading">Loading…</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
