--- a/Android/RSCAndroid/app/src/main/res/values/strings.xml
+++ b/Android/RSCAndroid/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="facebook_app_id">1829184290631001</string>
 
-    <string name="google_api_key">AIzaSyB3o7sP-Y4MQAuEekYTNrygpiZJtWt1u7g</string>
+    <string name="google_key">AIzaSyB3o7sP-Y4MQAuEekYTNrygpiZJtWt1u7g</string>
 
     <string name="fb_login_protocol_scheme">fb1829184290631001</string>
 </resources>
