--- a/Android/RSCAndroid/app/src/main/res/values/strings.xml
+++ b/Android/RSCAndroid/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="google_key">AIzaSyB3o7sP-Y4MQAuEekYTNrygpiZJtWt1u7g</string>
 
     <string name="fb_login_protocol_scheme">fb1829184290631001</string>
+    <string name="location_rationale">To view available quizzes near you, the app needs your permission to access your location.</string>
+
+    <string name="your_location">Your location</string>
 </resources>
