--- a/Android/RSCAndroid/app/src/main/res/values/strings.xml
+++ b/Android/RSCAndroid/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="cancel">Cancel</string>
     <string name="facebook_app_id">1829184290631001</string>
     <string name="fb_login_protocol_scheme">fb1829184290631001</string>
+    <string name="team_curr_members_string">Currently in team: %d</string>
+    <string name="max_slots_in_team">Allowed slots in a team: %d</string>
 </resources>
