--- a/Android/RSCAndroid/app/src/main/res/values/strings.xml
+++ b/Android/RSCAndroid/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
 
     <string name="empty_events">Unfortunately there are no events available at the moment.</string>
     <string name="empty_upcoming">You have no upcoming events.\nJoin an event with your team!</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
